# tensorlogic

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  GETTING_STARTED.md  README.md  TODO.md  TUTORIAL.md
crates/tensorlogic/: Cargo.toml  README.md  TODO.md
crates/tensorlogic-cli/: TODO.md  (+3 more)
crates/tensorlogic-infer/: Cargo.toml  README.md  TODO.md
crates/tensorlogic-infer/src/: async_exec.rs  auto_parallel.rs  backend_kind.rs  beam_search.rs  compilation.rs  constraint_propagation.rs  context.rs  cost_model.rs  critical_path.rs  debug.rs  diagnostics.rs  distributed.rs  dynamic_batching.rs  execution_plan.rs  fusion.rs  jit.rs  join_order.rs  learned_opt.rs  lib.rs  mcmc.rs  memo_cache.rs  mixed_precision.rs  multimodel.rs  optimization.rs  parallel.rs  perfregression.rs  placement.rs  profiling.rs  pruning.rs  quantization.rs  recovery.rs  rewrite.rs  sampling.rs  scheduling.rs  shape.rs  simd.rs  sparse.rs  speculative.rs  step_executor.rs  streaming.rs  (+10 more)
crates/tensorlogic-infer/src/causal/: criteria.rs  data.rs  error.rs  estimation.rs  graph.rs  mod.rs
crates/tensorlogic-infer/src/higher_order/: hessian.rs  jacobian.rs  mod.rs
crates/tensorlogic-infer/src/low_rank/: approximation.rs  config.rs  error.rs  mod.rs  svd.rs
crates/tensorlogic-infer/src/partitioned/: config.rs  mod.rs  reducer.rs
crates/tensorlogic-infer/tests/: backend_kind_smoke.rs
crates/tensorlogic-oxicuda-backend/: CHANGELOG.md  Cargo.toml  README.md  TODO.md
crates/tensorlogic-oxicuda-backend/benches/: gpu_vs_cpu_matmul.rs
crates/tensorlogic-oxicuda-backend/src/: autodiff.rs  einsum.rs  elem_ops.rs  error.rs  executor.rs  fft.rs  lib.rs  reduce.rs
crates/tensorlogic-oxicuda-backend/tests/: autodiff_smoke.rs  compile_smoke.rs  einsum_specs.rs  elem_ops_smoke.rs  fft_smoke.rs  gpu_sgemm.rs  native_broadcast_smoke.rs  reduce_smoke.rs
crates/tensorlogic-oxicuda-rng/: Cargo.toml  README.md  TODO.md
crates/tensorlogic-oxicuda-rng/src/: engine.rs  error.rs  lib.rs
crates/tensorlogic-oxicuda-rng/tests/: f64_and_stream.rs  gpu_rng.rs  smoke.rs
crates/tensorlogic-oxicuda-solver/: Cargo.toml  README.md  TODO.md
crates/tensorlogic-oxicuda-solver/src/: banded.rs  dense.rs  error.rs  iterative.rs  lib.rs
crates/tensorlogic-oxicuda-solver/tests/: advanced_solver.rs  gpu_solver.rs  smoke.rs
crates/tensorlogic-oxicuda-sparse/: Cargo.toml  README.md  TODO.md
crates/tensorlogic-oxicuda-sparse/src/: csc.rs  csr.rs  error.rs  lib.rs
crates/tensorlogic-oxicuda-sparse/tests/: advanced_sparse.rs  gpu_spmv.rs  smoke.rs
crates/tensorlogic-py/: COMPLIANCE_REPORT.md  Cargo.toml  README.md  TODO.md  pyproject.toml
crates/tensorlogic-py/src/: async_executor.rs  backend.rs  dsl.rs  lib.rs  performance.rs  progress.rs  provenance.rs  training.rs
crates/tensorlogic-quantrs-hooks/: Cargo.toml  README.md  TODO.md
crates/tensorlogic-quantrs-hooks/benches/: factor_operations.rs  inference_algorithms.rs  message_passing.rs
crates/tensorlogic-quantrs-hooks/examples/: parameter_learning.rs  structured_variational.rs
crates/tensorlogic-quantrs-hooks/fuzz/: Cargo.toml
crates/tensorlogic-quantrs-hooks/fuzz/fuzz_targets/: adapter_parse.rs  distribution_deserialize.rs
crates/tensorlogic-quantrs-hooks/src/: cache.rs  convergence.rs  dbn.rs  elimination_ordering.rs  expectation_propagation.rs  factor.rs  factor_graph_viz.rs  graph.rs  inference.rs  influence.rs  junction_tree.rs  lib.rs  linear_chain_crf.rs  memory.rs  message_passing.rs  models.rs  parallel_message_passing.rs  parameter_learning.rs  quantrs_hooks.rs  quantum_simulation.rs  sampling.rs  tensor_network_bridge.rs  variable_elimination.rs  variational.rs
crates/tensorlogic-quantrs-hooks/src/loopy_bp/: beliefs.rs  config.rs  cycle.rs  energy.rs  engine.rs  mod.rs  schedules.rs  tests.rs  types.rs
crates/tensorlogic-quantrs-hooks/src/vmp/: beta.rs  distributions.rs  engine.rs  exponential_family.rs  gamma.rs  messages.rs  mixture.rs  mod.rs  special.rs  tests.rs
crates/tensorlogic-quantrs-hooks/tests/: integration_tests.rs  property_tests.rs  proptest_hooks.rs  tlexpr_integration.rs  vmp_integration.rs
crates/tensorlogic-train/: Cargo.toml  QUALITY_REPORT.md  README.md  TODO.md
crates/tensorlogic-train/benches/: callback_overhead.rs  loss_performance.rs  metrics_performance.rs  training_performance.rs
crates/tensorlogic-train/docs/: HYPERPARAMETER_TUNING.md  LOSS_FUNCTIONS.md
crates/tensorlogic-train/examples/: 01_basic_training.rs  02_classification_with_metrics.rs  04_logical_loss_training.rs  05_profiling_and_monitoring.rs  06_curriculum_learning.rs  07_transfer_learning.rs  08_hyperparameter_optimization.rs  09_cross_validation.rs  10_ensemble_learning.rs  11_advanced_integration.rs  19_sophia_optimizer.rs  20_model_soups.rs  21_bayesian_optimization.rs  22_gradient_centralization.rs
crates/tensorlogic-train/src/: adversarial.rs  batch.rs  checkpoint.rs  crossval.rs  curriculum.rs  data.rs  distillation.rs  dropblock.rs  early_stopping.rs  ensemble.rs  few_shot.rs  gradient_accumulation.rs  gradient_centralization.rs  label_smoothing.rs  lib.rs  logging.rs  lr_scheduler.rs  meta_learning.rs  mixed_precision.rs  model.rs  multitask.rs  neural_ode.rs  online_learning.rs  pruning.rs  quantization.rs  regularization.rs  sampling.rs  stochastic_depth.rs  structured_logging.rs  trainer.rs  transfer.rs  utils.rs  weight_init.rs
crates/tensorlogic-train/src/augmentation/: error.rs  functional.rs  mod.rs  pipeline.rs  rng.rs  trait_api.rs
crates/tensorlogic-train/src/callbacks/: checkpoint.rs  core.rs  early_stopping.rs  gradient.rs  histogram.rs  profiling.rs
crates/tensorlogic-train/src/hyperparameter/: acquisition.rs  bayesian.rs  gp.rs  kernel.rs  mod.rs  search.rs  space.rs  tests.rs  value.rs
crates/tensorlogic-train/src/lora/: adapter.rs  config.rs  error.rs  layer.rs  mod.rs  tests.rs
crates/tensorlogic-train/tests/: lora_integration.rs
crates/tensorlogic/src/: lib.rs
crates/tensorlogic/tests/: prelude_smoke.rs  reexport_surface.rs
tools/bench-tracker/: Cargo.toml
tools/bench-tracker/src/: parser.rs
(+635 files in other folders)
