[workspace]
members = [
  "crates/tensorlogic",
  "crates/tensorlogic-cli",
  "crates/tensorlogic-ir",
  "crates/tensorlogic-compiler",
  "crates/tensorlogic-infer",
  "crates/tensorlogic-train",
  "crates/tensorlogic-adapters",
  "crates/tensorlogic-oxirs-bridge",
  "crates/tensorlogic-scirs-backend",
  "crates/tensorlogic-sklears-kernels",
  "crates/tensorlogic-quantrs-hooks",
  "crates/tensorlogic-trustformers",
  "crates/tensorlogic-oxicuda-backend",
  "crates/tensorlogic-oxicuda-sparse",
  "crates/tensorlogic-oxicuda-solver",
  "crates/tensorlogic-oxicuda-rng",
  "tools/bench-tracker",
]
# Note: tensorlogic-py is excluded from workspace as it uses PyO3 extension-module
# and must be built with maturin (not cargo build)
# Note: fuzz directories are excluded as they have their own workspace configuration
exclude = [
  "crates/tensorlogic-py",
  "crates/*/fuzz",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["COOLJAPAN OU (Team Kitasan)"]
license = "Apache-2.0"
homepage = "https://github.com/cool-japan/tensorlogic"
repository = "https://github.com/cool-japan/tensorlogic"

[workspace.dependencies]
# External dependencies
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
oxicode = { version = "0.2", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
indexmap = { version = "2", features = ["serde"] }
smallvec = "1"
once_cell = "1"
lazy_static = "1"
log = "0.4"
criterion = "0.8"
proptest = "1"
approx = "0.5"
rayon = "1.12"
parking_lot = "0.12"
prost = "0.14"
prost-types = "0.14"

# CLI-specific dependencies
toml = "1.1"
clap = { version = "4.6", features = ["derive", "cargo", "env"] }
clap_complete = "4.6"
rustyline = "18.0"
colored = "3.1"
tabled = "0.20"
notify = "8.2"
indicatif = "0.18"
dirs = "6.0"
num_cpus = "1.17"
oxiarc-deflate = "0.2.7"

# Dev dependencies
assert_cmd = "2.2"
predicates = "3.1"

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# SciRS2 dependencies (from crates.io)
scirs2-core = { version = "0.4.2", features = ["random"] }
scirs2-linalg = "0.4.2"
scirs2-autograd = "0.4.2"
scirs2-optimize = "0.4.2"

# ToRSh dependencies (from crates.io) - Pure Rust PyTorch alternative
torsh-core = "0.1.2"
torsh-tensor = "0.1.2"

# SkleaRS dependencies (from crates.io)
sklears-core = "0.1.1"
sklears-kernel-approximation = "0.1.1"

# QuantRS2 dependencies (from crates.io) - Quantum computing framework
quantrs2-core = "0.1.3"
quantrs2-circuit = "0.1.3"
quantrs2-sim = "0.1.3"

# OxiRS dependencies (from crates.io) - RDF/Knowledge Graph framework
oxirs-core = "0.2.4"
oxirs-gql = "0.2.4"
oxirs-ttl = "0.2.4"

ndarray = "0.17"
crc32fast = "1.5"
byteorder = "1.5"
hostname = "0.4"
tokio = { version = "1.52", features = ["sync", "time", "macros", "rt-multi-thread"] }

# Internal tensorlogic crates
tensorlogic-ir = { version = "0.1.0", path = "crates/tensorlogic-ir" }
tensorlogic-adapters = { version = "0.1.0", path = "crates/tensorlogic-adapters" }
tensorlogic-infer = { version = "0.1.0", path = "crates/tensorlogic-infer" }
tensorlogic-compiler = { version = "0.1.0", path = "crates/tensorlogic-compiler" }
tensorlogic-scirs-backend = { version = "0.1.0", path = "crates/tensorlogic-scirs-backend" }
tensorlogic-train = { version = "0.1.0", path = "crates/tensorlogic-train" }
tensorlogic-oxirs-bridge = { version = "0.1.0", path = "crates/tensorlogic-oxirs-bridge" }
tensorlogic-sklears-kernels = { version = "0.1.0", path = "crates/tensorlogic-sklears-kernels" }
tensorlogic-quantrs-hooks = { version = "0.1.0", path = "crates/tensorlogic-quantrs-hooks" }
tensorlogic-trustformers = { version = "0.1.0", path = "crates/tensorlogic-trustformers" }

# New Round 5 tensorlogic wrapper crates
tensorlogic-oxicuda-sparse = { version = "0.1.0", path = "crates/tensorlogic-oxicuda-sparse" }
tensorlogic-oxicuda-solver = { version = "0.1.0", path = "crates/tensorlogic-oxicuda-solver" }
tensorlogic-oxicuda-rng    = { version = "0.1.0", path = "crates/tensorlogic-oxicuda-rng" }

# OxiCUDA sub-feature crates (Round 5)
oxicuda-sparse = { version = "0.1.4" }
oxicuda-solver = { version = "0.1.4" }
oxicuda-rand   = { version = "0.1.4" }
oxicuda-driver = { version = "0.1.4" }
oxicuda-memory = { version = "0.1.4" }
oxicuda-blas   = { version = "0.1.4" }

# SciRS2 sparse support
scirs2-sparse = "0.4.2"


