[workspace]
# This package is intentionally standalone (not in parent workspace)
# because PyO3 extension-module requires maturin for building

[package]
name = "tensorlogic-py"
version = "0.1.1"
edition = "2021"
description = "Python bindings for TensorLogic"
license = "Apache-2.0"
homepage = "https://github.com/cool-japan/tensorlogic"
repository = "https://github.com/cool-japan/tensorlogic"
rust-version = "1.90"
keywords = ["tensor", "logic", "neural-symbolic", "machine-learning", "python"]
categories = ["science", "algorithms", "mathematics"]
readme = "README.md"
documentation = "https://docs.rs/pytensorlogic"

[lib]
name = "pytensorlogic"
crate-type = ["cdylib"]

[features]
default = []
simd = ["scirs2-core/simd"]
gpu = []  # Future GPU support

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py39"] }
numpy = "0.27"
anyhow = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
oxicode = { version = "0.2.3", features = ["serde"] }
tensorlogic-ir = { version = "0.1.0", path = "../tensorlogic-ir" }
tensorlogic-compiler = { version = "0.1.0", path = "../tensorlogic-compiler" }
tensorlogic-infer = { version = "0.1.0", path = "../tensorlogic-infer" }
tensorlogic-adapters = { version = "0.1.0", path = "../tensorlogic-adapters" }
tensorlogic-scirs-backend = { version = "0.1.0", path = "../tensorlogic-scirs-backend" }
tensorlogic-oxirs-bridge = { version = "0.1.0", path = "../tensorlogic-oxirs-bridge" }
scirs2-core = "0.5.0"

[package.metadata.maturin]
# optional: maturin build config
