[package]
name = "tensorlogic-quantrs-hooks-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
libfuzzer-sys = "0.4"
tensorlogic-quantrs-hooks = { path = ".." }
serde_json = "1"

[[bin]]
name = "adapter_parse"
path = "fuzz_targets/adapter_parse.rs"
test = false
doc = false

[[bin]]
name = "distribution_deserialize"
path = "fuzz_targets/distribution_deserialize.rs"
test = false
doc = false

[profile.release]
debug = 1
